--- a/SoulIT_WebSite/Content/bootstrap.css
+++ b/SoulIT_WebSite/Content/bootstrap.css
@@ -1084,7 +1084,7 @@ html {
 }
 body {
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-  font-size: 14px;
+  font-size: 18px;
   line-height: 1.42857143;
   color: white;
   background-color: rgb(0,39,53);
@@ -1116,6 +1116,7 @@ figure {
 }
 img {
   vertical-align: middle;
+  align-self: center;
 }
 .img-responsive,
 .thumbnail > img,
@@ -1124,7 +1125,7 @@ img {
 .carousel-inner > .item > a > img {
   display: block;
   max-width: 100%;
-  height: auto;
+  height: 400px;
 }
 .img-rounded {
   border-radius: 6px;
@@ -4296,7 +4297,7 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
 @media (min-width: 768px) {
   .navbar > .container .navbar-brand,
   .navbar > .container-fluid .navbar-brand {
-    margin-left: -15px;
+    margin-left: 0px;
   }
 }
 .navbar-toggle {
@@ -4361,7 +4362,7 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
 }
 @media (min-width: 768px) {
   .navbar-nav {
-    float: left;
+    float: right;
     margin: 0;
   }
   .navbar-nav > li {
@@ -6298,7 +6299,7 @@ button.close {
   display: block;
 }
 .carousel-inner > .active {
-  left: 0;
+  left: 10%;
 }
 .carousel-inner > .next,
 .carousel-inner > .prev {
@@ -6327,7 +6328,7 @@ button.close {
   top: 0;
   bottom: 0;
   left: 0;
-  width: 15%;
+  width: 10%;
   font-size: 20px;
   color: #fff;
   text-align: center;
@@ -6415,8 +6416,9 @@ button.close {
   cursor: pointer;
   background-color: #000 \9;
   background-color: rgba(0, 0, 0, 0);
-  border: 1px solid #fff;
-  border-radius: 10px;
+  border: 5px solid #ddd;
+  border-radius: 20px;
+
 }
 .carousel-indicators .active {
   width: 12px;
