--- a/SoulIT_WebSite/Views/Home/Index.cshtml
+++ b/SoulIT_WebSite/Views/Home/Index.cshtml
@@ -2,6 +2,16 @@
     ViewBag.Title = "Home Page";
 }
 <!-- Navigation -->
+<script src="~/Scripts/jquery-1.10.2.min.js"></script>
+
+
+<script type="text/javascript">
+$(document).ready(function(){
+    $('#mycarousel').carousel({ interval: 3000 });
+});
+</script>
+
+
 <body>
 
     
@@ -15,11 +25,11 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="#">SoulIT</a>
+                <a class="navbar-brand" href="#" > <img src="~/Img/SoulIT.png" alt="SoulIT" /></a>
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                <ul class="nav navbar-nav">
+                <ul class="nav navbar-nav" >
                     <li>
                         <a href="#">Sobre</a>
                     </li>
@@ -45,7 +55,7 @@
             <div class="col-lg-12">
                 <h1 class="page-header">
 
-                    <small> Simulador Único</small>
+                    <small> SIMULADOR ÚNICO </small>
                 </h1>
             </div>
         </div>
@@ -53,17 +63,67 @@
         <!-- Portfolio Item Row -->
         <div class="row">
             <div class="col-md-8">
-                <img class="img-responsive" src="http://placehold.it/750x500" alt="">
+                <div class="carousel slide" id="mycarousel">
+                    <ol class="carousel-indicators">
+                        <li class="active" data-slide-to="0" data-target="#mycarousel">
+                        </li>
+                        <li data-slide-to="1" data-target="#mycarousel">
+                        </li>
+                        <li data-slide-to="2" data-target="#mycarousel">
+                        </li>
+                    </ol>
+                    <div class="carousel-inner">
+                        <div class="item active" style="text-align:center">
+                            <img alt="Carousel Bootstrap First" src="~/Img/Slide3.jpg" style="width:80%" />
+                            <div class="carousel-caption">
+                                <h4>
+                                    
+                                </h4>
+                                <p>
+                                    
+                                </p>
+                            </div>
+                        </div>
+                        <div class="item">
+                            <img alt="Carousel Bootstrap Second" src="~/Img/Slide4.jpg" style="width:80%" />
+                            <div class="carousel-caption">
+                                <h4>
+                                    
+                                </h4>
+                                <p>
+                                    
+                                </p>
+                            </div>
+                        </div>
+                        <div class="item">
+                            <img alt="Carousel Bootstrap Third" src="~/Img/Slide5.jpg" style="width:80%" />
+                            <div class="carousel-caption">
+                                <h4>
+                                    
+                                </h4>
+                                <p>
+                                    
+                                </p>
+                            </div>
+                        </div>
+                    </div> <a class="left carousel-control" href="#mycarousel" data-slide="prev"><span class="glyphicon glyphicon-chevron-left"></span></a> <a class="right carousel-control" href="#mycarousel" data-slide="next"><span class="glyphicon glyphicon-chevron-right"></span></a>
+                </div>
             </div>
             <div class="col-md-4">
-                <h3>Project Description</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae. Sed dui lorem, adipiscing in adipiscing et, interdum nec metus. Mauris ultricies, justo eu convallis placerat, felis enim.</p>
-                <h3>Project Details</h3>
+                <h3>SoulIT - Simulador</h3>
+                <p>Após estudar o mercado de seguros por 5 anos, a SoulIT disponibiliza o seu Simulador de cálculo Online com os Módulos:</p>
                 <ul>
-                    <li>Lorem Ipsum</li>
-                    <li>Dolor Sit Amet</li>
-                    <li>Consectetur</li>
-                    <li>Adipiscing Elit</li>
+                    <li>Setup & Simulador</li>
+                    <li>Subscrição</li>
+                    <li>Emissão</li>
+                    <li>Relatórios Gerenciais e Operacionais</li>
+                </ul>
+                <h3>Saia na frente do mercado:</h3>
+                <ul>
+                    <li>Fácil Instalação</li>
+                    <li>Rápida Configuração</li>
+                    <li>Resultados Instantâneos</li>
+                    
                 </ul>
             </div>
         </div>
