--- a/SoulIT_WebSite/Views/Home/About.cshtml
+++ b/SoulIT_WebSite/Views/Home/About.cshtml
@@ -1,5 +1,6 @@
 ﻿@{
     ViewBag.Title = "About";
+
 }
 <h2>@ViewBag.Title.</h2>
 <h3>@ViewBag.Message</h3>
@@ -7,3 +8,5 @@
 <p>Use this area to provide additional information.</p>
 
 
+<!-- /.container -->
+<!-- jQuery -->
