--- a/SoulIT_WebSite/Views/Home/Index.cshtml
+++ b/SoulIT_WebSite/Views/Home/Index.cshtml
@@ -11,44 +11,6 @@ $(document).ready(function(){
 });
 </script>
 
-
-<body>
-
-    
-    <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
-        <div class="container">
-            <!-- Brand and toggle get grouped for better mobile display -->
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-                    <span class="sr-only">Toggle navigation</span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                <a class="navbar-brand" href="#" > <img src="~/Img/SoulIT.png" alt="SoulIT" /></a>
-            </div>
-            <!-- Collect the nav links, forms, and other content for toggling -->
-            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                <ul class="nav navbar-nav" >
-                    <li>
-                        <a href="#">Sobre</a>
-                    </li>
-                    <li>
-                        <a href="#">Serviços</a>
-                    </li>
-                    <li>
-                        <a href="#">Produtos</a>
-                    </li>
-                    <li>
-                        <a href="#">Contato</a>
-                    </li>
-                </ul>
-            </div>
-            <!-- /.navbar-collapse -->
-        </div>
-        <!-- /.container -->
-    </nav>
-    <!-- Page Content -->
     <div class="container">
         <!-- Portfolio Item Heading -->
         <div class="row">
@@ -76,33 +38,27 @@ $(document).ready(function(){
                         <div class="item active" style="text-align:center">
                             <img alt="Carousel Bootstrap First" src="~/Img/Slide3.jpg" style="width:80%" />
                             <div class="carousel-caption">
-                                <h4>
-                                    
-                                </h4>
+                                <h4></h4>
                                 <p>
-                                    
+
                                 </p>
                             </div>
                         </div>
                         <div class="item">
                             <img alt="Carousel Bootstrap Second" src="~/Img/Slide4.jpg" style="width:80%" />
                             <div class="carousel-caption">
-                                <h4>
-                                    
-                                </h4>
+                                <h4></h4>
                                 <p>
-                                    
+
                                 </p>
                             </div>
                         </div>
                         <div class="item">
                             <img alt="Carousel Bootstrap Third" src="~/Img/Slide5.jpg" style="width:80%" />
                             <div class="carousel-caption">
-                                <h4>
-                                    
-                                </h4>
+                                <h4></h4>
                                 <p>
-                                    
+
                                 </p>
                             </div>
                         </div>
@@ -123,7 +79,7 @@ $(document).ready(function(){
                     <li>Fácil Instalação</li>
                     <li>Rápida Configuração</li>
                     <li>Resultados Instantâneos</li>
-                    
+
                 </ul>
             </div>
         </div>
@@ -134,13 +90,13 @@ $(document).ready(function(){
                 <h3 class="page-header">Related Projects</h3>
             </div>
             <div class="col-sm-3 col-xs-6">
-                <a href="#">
-                    <img class="img-responsive portfolio-item" src="http://placehold.it/500x300" alt="">
+                <a href="@Url.Action("Index","Home")">
+                    <img class="img-responsive portfolio-item" src="~/Img/Projeto1.jpg">
                 </a>
             </div>
             <div class="col-sm-3 col-xs-6">
                 <a href="#">
-                    <img class="img-responsive portfolio-item" src="http://placehold.it/500x300" alt="">
+                    <img class="img-responsive portfolio-item" src="~/Img/Projeto2.jpg" alt="">
                 </a>
             </div>
             <div class="col-sm-3 col-xs-6">
@@ -160,12 +116,9 @@ $(document).ready(function(){
         <footer>
             <div class="row">
                 <div class="col-lg-12">
-                    <p>Copyright &copy; Your Website 2014</p>
+                    <p>Copyright Your Website 2014</p>
                 </div>
             </div>
             <!-- /.row -->
         </footer>
     </div>
-</body>
-<!-- /.container -->
-<!-- jQuery -->
