--- a/SoulIT_WebSite/Views/Home/Contact.cshtml
+++ b/SoulIT_WebSite/Views/Home/Contact.cshtml
@@ -12,6 +12,6 @@
 </address>
 
 <address>
-    <strong>Support:</strong>   <a href="mailto:Support@example.com">Support@example.com</a><br />
+    <strong>Comercial</strong>   <a href="mailto:contato@soulit.com.br">Contato@SoulIT.com.br</a><br />
     <strong>Marketing:</strong> <a href="mailto:Marketing@example.com">Marketing@example.com</a>
 </address>
